--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.2.3",
     "cdbootstrap": "^1.3.4",
     "draft-js": "^0.11.7",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
